# MoldLab3D_cpp

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
include/: GameEngine.h  InputManager.h  MeshData.h  MoldLabGame.h  ShaderVariable.h  SimulationData.h  SimulationSettings.h  Spore.h  linmath.h
include/glad/: glad.h
shaders/: clear_grid.glsl  cube_renderer.glsl  decay_spores.glsl  draw_spores.glsl  fragment_shader.glsl  grow_spores.glsl  jump_flood_init.glsl  jump_flood_step.glsl  move_spores.glsl  quad_renderer.glsl  randomize_spores.glsl  renderer.glsl  scale_spores.glsl  simple_triangle.glsl  vertex_shader.glsl
src/: GameEngine.cpp  InputManager.cpp  MoldLabGame.cpp  ShaderVariable.cpp  barebonesCopy.cpp  glad.c  main.cpp  mainbackup.cpp
